--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </style>
 </head>
 <body style="margin:0;padding:0;background-color:#c8c8c8">
-  <h1 style="padding:16px;font-size:64px;">Sangaljan16</h1>
+  <h1 style="padding:16px;font-size:64px;">Šangaljan16</h1>
   <img src="image.png" style="margin:auto;position:absolute;top:25%;left:25%;">
 </body>
 </html>
